<resources>
    <string name="app_name">Lights Out!</string>
    <string name="lights_out">Lights Out!</string>

    <string name="title_activity_game_grid">GameGridActivity</string>
    <string name="gameBoardState">gameBoardState</string>
    <string name="dimension">dimension</string>
    <string name="originalStartState">originalStartState</string>
    <string name="resume_from_db_flag">resumeGameFromDB</string>
    <string name="set_random_state_flag">setRandomStateFlag</string>
    <string name="title_activity_level_selector">SelectLevelActivity</string>
    <string name="stats_activity_title">StatsActivity</string>

    <string name="level_chooser_button_label">%1$dx%2$d</string>
    <string name="should_randomize">Randomize</string>
    <string name="level_picker_resume_or_restart_title">Continue %1$s</string>
    <string name="level_picker_resume_or_restart_message_prompt"> Would you like to resume your already existing %1$d x %2$d game?</string>
    <string name="restart_new_game">New Game</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="request_to_save_game_title">Save Current Game</string>
    <string name="request_to_save_game_message">Would you like to Save your current %1$d x %2$d game?</string>
    <string name="no_do_not_save_current_game">No, do not save</string>

    <string name="undo">undo</string>
    <string name="redo">redo</string>
    <string name="show_hint">hint</string>
    <string name="solution">solution</string>
    <string name="reset">reset</string>
    <string name="new_game">new</string>

    <string name="exit_game_title">Exit Lights Out</string>
    <string name="exit_game_question">Are you sure to exit?</string>
    <string name="turn_off_all_the_lights">Turn off all the Lights!!</string>
    <string name="play">play</string>
    <string name="about">about</string>
    <string name="all_lights_off">All lights are off!</string>
    <string name="randomize_board">Randomize Board</string>
    <string name="randomize_confirmation_text">Are you sure? All current progress will be lost!</string>
    <string name="reset_board">Randomize Board</string>
    <string name="reset_board_confirmation_text">Are you sure? Board will reset to the last saved state!</string>
    <string name="show_solution_title">Show Solution</string>
    <string name="show_soltuion_confirmation"> Are you sure? Your progress will not count!</string>
    <string name="game_win_state_label">GameWinStateActivity</string>

    <string name="arcade_tab_name">Arcade</string>
    <string name="classic_tab_name">Classic</string>
    <string name="best_score_level_gameType">bestScore</string>
    <string name="total_board_power_saved">totalBoardPower</string>
    <string name="initial_board_config">initialBoardConfig</string>
    <string name="user_toggles_after_game">userToggles</string>
    <string name="game_summary_watts_saved_label">watts saved</string>
    <string name="game_summary_moves_label">moves</string>
    <string name="game_summary_hints_used_label">hints used</string>
    <string name="no_hint_needed">You have all the hints you need!</string>
    <string name="moves_per_bulb">movesPerBulb</string>
    <string name="selected_game_mode">selectedGameMode</string>
    <string name="arcade_select_level_prompt_begin">begin your campaign</string>
    <string name="arcade_select_level_prompt_continue">continue your campaign</string>
    <string name="classic_select_level_prompt">practice any board size</string>
    <string name="arcade_description">Complete each level\nto unlock the next one!</string>
    <string name="classic_description">All lights are on:\ntry to turn them all off!</string>

    <string name="stats_label">stats</string>
    <string name="rules_label">rules</string>
    <string name="home_label">home</string>

    <string name="stats_games_completed_label">games completed</string>
    <string name="stats_total_moves_label">total moves</string>
    <string name="stats_hints_used_label">hints used</string>
    <string name="stats_games_cheated_label">games cheated</string>
    <string name="stats_cheat_percentage_label">cheat %</string>

    <string name="title_activity_rules">RulesActivity</string>
    <string name="rules_activity">RulesActivity</string>
    <string name="rules_title">Rules</string>
    <string name="campaign_rules_title">campaign</string>
    <string name="practice_rules_title">practice</string>
    <string name="switch_off_all_the_bulbs_rule">Switch off all the bulbs.</string>
    <string name="neighbor_toggle_rule">When you toggle a bulb, its neighbors switch too.</string>
    <string name="hint_rule">Use hints when you\'re stuck.</string>
    <string name="solution_rule">See our solution if you still can’t solve it.</string>
    <string name="star_rule_prefix">We solved the board too so if you get</string>
    <string name="rule_for_3_stars">you\'re as good as us!</string>
    <string name="rule_for_2_stars">you\'re half as good as us.</string>
    <string name="rule_for_1_star">you should practice more…</string>

    <string name="solve_unlock_achievement_prompt">solve %1$d x %2$d to unlock new title</string>
    <string name="congrats_message_campaign_complete">congrats! you have mastered the puzzle :)</string>

    <string name="rate_us_app_store">\u0020 \u0020\u0020 \u0020 rate us</string>
    <string name="contact_us">contact us</string>
    <string name="stats_lights_turned_off">lights turned Off</string>
    <string name="rule_for_0_stars">you definitely cheated 👀</string>
</resources>
