<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <data>
        <import type="com.algorithmandblues.lightsout.GameInstance"/>
        <variable name="gameinstance" type="GameInstance" />
    </data>
    <RelativeLayout
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:keepScreenOn="true"
        android:background="@color/background_color">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="0dp">


            <RelativeLayout
                android:id="@+id/game_text_view_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="60dp"
                android:layout_above="@+id/power_text_view_holder"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:visibility="gone">
                <TextView
                    android:id="@+id/game_grid_title_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@{gameinstance.gameOverText}"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:layout_gravity="center_horizontal">
                </TextView>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/power_text_view_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:layout_above="@+id/hints_left_text_view_holder"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:visibility="gone">
                <TextView
                    android:id="@+id/power_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@{`Power: ` + gameinstance.currentPowerConsumption + `W`}"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:layout_gravity="center_horizontal">
                </TextView>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/hints_left_text_view_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:layout_above="@+id/moveCounter_text_view_holder"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:visibility="gone">
                <TextView
                    android:id="@+id/hints_left_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@{`Hints Left: ` + gameinstance.hintsLeft }"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:layout_gravity="center_horizontal">
                </TextView>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/moveCounter_text_view_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:layout_above="@+id/game_grid_holder"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:visibility="gone">
                <TextView
                    android:id="@+id/move_counter_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@{`Move Counter: ` + gameinstance.moveCounter}"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:layout_gravity="center_horizontal">
                </TextView>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/game_grid_holder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:orientation="vertical"
                android:paddingBottom="80dp"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true">
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/gameButtonsHolder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:visibility="visible"
                android:layout_alignParentBottom="true">

                <LinearLayout
                    android:id="@+id/undo_button_holder"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.16"
                    android:orientation="vertical"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:alpha="@{!gameinstance.isUndoStackEmpty ? (float) 1 : (float) 0.2}"
                    android:enabled="@{!gameinstance.isUndoStackEmpty}"
                    android:focusable="true">
                    <ImageView
                        android:id="@+id/undo_image"
                        android:layout_width="@dimen/button_icon_size"
                        android:layout_height="@dimen/button_icon_size"
                        android:scaleX="@dimen/scale_factor"
                        android:scaleY="@dimen/scale_factor"
                        android:background="@drawable/undo"
                        android:layout_gravity="center"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/undo"
                        android:textAlignment="center"
                        android:gravity="center_horizontal"
                        android:maxLines="1"
                        app:autoSizeTextType="uniform" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/redo_button_holder"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.16"
                    android:orientation="vertical"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:alpha="@{!gameinstance.isRedoStackEmpty ? (float) 1.0 : (float) 0.2}"
                    android:enabled="@{!gameinstance.isRedoStackEmpty}"
                    android:focusable="true">
                    <ImageView
                        android:id="@+id/redo_button"
                        android:layout_width="@dimen/button_icon_size"
                        android:layout_height="@dimen/button_icon_size"
                        android:background="@drawable/redo"
                        android:layout_gravity="center"
                        android:scaleX="@dimen/scale_factor"
                        android:scaleY="@dimen/scale_factor"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:maxLines="1"
                        android:text="@string/redo"
                        android:textAlignment="center"
                        app:autoSizeTextType="uniform"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/hint_button_holder"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.16"
                    android:orientation="vertical"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:alpha="@{gameinstance.hintsLeft > 0 &amp;&amp; !gameinstance.isShowingSolution ? (float) 1.0 : (float) 0.2}"
                    android:enabled="@{gameinstance.hintsLeft > 0 &amp;&amp; !gameinstance.isShowingSolution}"
                    android:focusable="true">

                    <ImageView
                        android:id="@+id/hint_button"
                        android:layout_width="@dimen/button_icon_size"
                        android:layout_height="@dimen/button_icon_size"
                        android:layout_gravity="center"
                        android:background="@drawable/hint"
                        android:scaleX="@dimen/scale_factor"
                        android:scaleY="@dimen/scale_factor"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/show_hint"
                        android:textAlignment="center"
                        android:maxLines="1"
                        app:autoSizeTextType="uniform" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/solution_button_holder"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.16"
                    android:orientation="vertical"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:enabled="@{!gameinstance.isGameOver}"
                    android:focusable="true">

                    <ImageView
                        android:id="@+id/solution"
                        android:layout_width="@dimen/button_icon_size"
                        android:layout_height="@dimen/button_icon_size"
                        android:layout_gravity="center"
                        android:scaleX="@dimen/scale_factor"
                        android:scaleY="@dimen/scale_factor"
                        android:background="@{(gameinstance.isShowingSolution &amp;&amp; !gameinstance.isGameOver) ? @drawable/showsolution : @drawable/dontshowsolution}"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/solution"
                        android:textAlignment="center"
                        android:gravity="center_horizontal"
                        android:maxLines="1"
                        app:autoSizeTextType="uniform" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/reset_button_holder"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.16"
                    android:orientation="vertical"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:focusable="true">

                    <ImageView
                        android:id="@+id/reset"
                        android:layout_width="@dimen/button_icon_size"
                        android:layout_height="@dimen/button_icon_size"
                        android:scaleX="@dimen/scale_factor"
                        android:scaleY="@dimen/scale_factor"
                        android:layout_gravity="center"
                        android:background="@drawable/reset"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/reset"
                        android:textAlignment="center"
                        android:gravity="center_horizontal"
                        android:maxLines="1"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/new_game_button_holder"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.16"
                    android:orientation="vertical"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:focusable="true">
                    <ImageView
                        android:id="@+id/new_game_image"
                        android:layout_width="@dimen/button_icon_size"
                        android:layout_height="@dimen/button_icon_size"
                        android:scaleX="@dimen/scale_factor"
                        android:scaleY="@dimen/scale_factor"
                        android:layout_gravity="center"
                        android:background="@drawable/newgame"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/new_game"
                        android:textAlignment="center"
                        android:gravity="center_horizontal">
                    </TextView>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>
</layout>
